<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_Start"
        style="@style/btnStyle"
        android:layout_width="424dp"
        android:layout_height="421dp"
        android:background="#8586F013"
        android:onClick="startButton"
        android:text="@string/start"
        android:textColor="#DE6464"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#A9A9A9"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:text=""
            android:textColor="#DE6464"
            style="@style/btnStyle" />

        <Button
            android:id="@+id/btn2"
            style="@style/btnStyle"
            android:text=""
            android:textColor="#DE6464" />

        <Button
            android:id="@+id/btn3"
            style="@style/btnStyle"
            android:text=""
            android:textColor="#DE6464" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#A9A9A9"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            style="@style/btnStyle"
            android:text=""
            android:textColor="#DE6464" />

        <Button
            android:id="@+id/btn5"
            style="@style/btnStyle"
            android:text=""
            android:textColor="#DE6464"/>

        <Button
            android:id="@+id/btn6"
            style="@style/btnStyle"
            android:text=""
            android:textColor="#DE6464" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#A9A9A9"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:text=""
            style="@style/btnStyle"
            android:textColor="#DE6464" />

        <Button
            android:id="@+id/btn8"
            style="@style/btnStyle"
            android:text=""
            android:textColor="#DE6464" />

        <Button
            android:id="@+id/btn9"
            style="@style/btnStyle"
            android:text=""
            android:textColor="#DE6464" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TV"
            style="@style/btnStyle"
            android:background="@color/color"
            android:textAlignment="center"
            android:textColor="#DE6464"
            android:gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>