<resources>
    <string name="app_name">Krest-Nol</string>
    <string name="start">ИГРАТЬ | РЕСТАРТ</string>
    <string name="x">X</string>
    <string name="O">O</string>
</resources>